src/objects/Third_Party_Originator__c.object
<CustomObject>
    <description>to store the originator association between a third party and a subject</description>
    <fields>
        <fullName>Other_Originator__c</fullName>
        <label>Other Originator</label>
        <picklist>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friend/Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Regulatory Agent/Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Third_Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipName>Third_Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Third Party Originator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Third Party Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Originators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>